--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,34 @@
+<mat-drawer-container class="container" autosize>
+
+    <mat-drawer #drawer class="sidenav" opened mode="side">
+        <p>Side Navbar</p>
+    </mat-drawer>
+
+    <mat-toolbar>
 
 
-<app-notify></app-notify>
-<app-schedule></app-schedule>
-<app-search></app-search>
-<app-sidemenu></app-sidemenu>
+        <button mat-icon-button color="basic" aria-label="Example icon button with a menu icon" (click)="drawer.toggle()">
+            <mat-icon>menu</mat-icon>
+        </button>
+
+        <span>My App</span>
+
+        <span class="example-spacer"></span>
+
+        <app-search></app-search>
+        
+        <app-notify></app-notify>
+
+        <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+          <mat-icon>favorite</mat-icon>
+        </button>
+
+        <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+          <mat-icon>share</mat-icon>
+        </button>
+        
+    </mat-toolbar>
+
+    <app-schedule></app-schedule>
+
+</mat-drawer-container>
