--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,34 +1,25 @@
 <mat-drawer-container class="container" autosize>
 
+    <!-- Боковая панель -->
     <mat-drawer #drawer class="sidenav" opened mode="side">
-        <p>Side Navbar</p>
+        <app-sidemenu></app-sidemenu>
     </mat-drawer>
 
-    <mat-toolbar>
+    <!-- Содержание -->
+    <mat-drawer-content>
 
+        <!-- Верхняя панель -->
+        <mat-toolbar>
+            <button mat-icon-button color="basic" aria-label="Example icon button with a menu icon" (click)="drawer.toggle()">
+                <mat-icon>menu</mat-icon>
+            </button>
 
-        <button mat-icon-button color="basic" aria-label="Example icon button with a menu icon" (click)="drawer.toggle()">
-            <mat-icon>menu</mat-icon>
-        </button>
+            <app-navbar></app-navbar>
 
-        <span>My App</span>
+        </mat-toolbar>
 
-        <span class="example-spacer"></span>
+        <router-outlet></router-outlet>
 
-        <app-search></app-search>
-        
-        <app-notify></app-notify>
-
-        <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
-          <mat-icon>favorite</mat-icon>
-        </button>
-
-        <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
-          <mat-icon>share</mat-icon>
-        </button>
-        
-    </mat-toolbar>
-
-    <app-schedule></app-schedule>
+    </mat-drawer-content>
 
 </mat-drawer-container>
