--- a/src/app/sidemenu/sidemenu.component.html
+++ b/src/app/sidemenu/sidemenu.component.html
@@ -1,32 +1,7 @@
-
-    <mat-drawer #drawer class="sidenav" opened mode="side">
-        <p>Side Navbar</p>
-    </mat-drawer>
-
-    <mat-toolbar>
-
-
-        <button mat-icon-button color="basic" aria-label="Example icon button with a menu icon" (click)="drawer.toggle()">
-            <mat-icon>menu</mat-icon>
-        </button>
-
-        <span>My App</span>
-
-        <span class="example-spacer"></span>
-
-        <app-search></app-search>
-        
-        <app-notify></app-notify>
-
-        <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
-          <mat-icon>favorite</mat-icon>
-        </button>
-
-        <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
-          <mat-icon>share</mat-icon>
-        </button>
-        
-    </mat-toolbar>
+<p>Side Navbar</p>
+<a [routerLink]="['/settings']">settings</a>
+<br>
+<a [routerLink]="['/']">profile</a>
 
 
 
