--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -2,4 +2,24 @@
 
 <p>profile works!</p>
 
+<app-action-button></app-action-button>
+
+<br>
+
+<app-move-button></app-move-button>
+
+<br>
+
+<app-to-work-button></app-to-work-button>
+
+<br>
+
+<app-start-date-button></app-start-date-button>
+
+<br>
+
+<br>
+
+<br>
+
 <app-schedule></app-schedule>
