--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <mat-drawer-container class="container" autosize>
 
     <!-- Боковая панель -->
-    <mat-drawer #drawer class="sidenav" opened mode="side">
+    <mat-drawer #drawer class="sidenav" closed mode="side">
         <app-sidemenu></app-sidemenu>
     </mat-drawer>
 
@@ -10,7 +10,7 @@
 
         <!-- Верхняя панель -->
         <mat-toolbar>
-            <button mat-icon-button color="basic" aria-label="Example icon button with a menu icon" (click)="drawer.toggle()">
+            <button mat-icon-button color="basic" (click)="drawer.toggle()">
                 <mat-icon>menu</mat-icon>
             </button>
 
