--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -5,7 +5,7 @@
 
     <app-notify></app-notify>
 
-    <button mat-icon-button aria-label="Example icon-button with heart icon">
+    <button mat-icon-button>
         <mat-icon>favorite</mat-icon>
     </button>
 </div>
