--- a/src/app/move-button/move-button.component.html
+++ b/src/app/move-button/move-button.component.html
@@ -1,4 +1,4 @@
-<app-log [act]="currentAct"></app-log>
+<app-log [act]="currentAct"></app-log>  
 <section>
-    <button mat-raised-button (click)="get(act)">Переместить</button>
+    <button mat-raised-button (click)="update()" (click)="get(act)">Переместить</button>
 </section>
