--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -10,6 +10,18 @@
 
 <br>
 
+<p>То, что сделал сейчас</p>
+
+<br>
+
+<app-custom-component></app-custom-component>
+
+<br>
+
+<p>То, что сделал сейчас ^^^</p>
+
+<br>
+
 <app-to-work-button></app-to-work-button>
 
 <br>
