--- a/src/app/date-range/date-range.component.html
+++ b/src/app/date-range/date-range.component.html
@@ -1,16 +1,16 @@
 <app-view [start]="currentStart" [end]="currentEnd"></app-view>
 <mat-form-field>
-    <mat-label>Enter a date range</mat-label>
+    <mat-label>Период просмотра</mat-label>
     <mat-date-range-input [formGroup]="range" [rangePicker]="picker">
       <input matStartDate formControlName="start" placeholder="Start date" (dateChange)="startChange($event)">
       <input matEndDate formControlName="end" placeholder="End date" (dateChange)="endChange($event)">
     </mat-date-range-input>
-    <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint>
+    <mat-hint>ММ/ДД/ГГГГ – ММ/ДД/ГГГГ</mat-hint>
     <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
     <mat-date-range-picker #picker></mat-date-range-picker>
   
-    <mat-error *ngIf="range.controls.start.hasError('matStartDateInvalid')">Invalid start date</mat-error>
-    <mat-error *ngIf="range.controls.end.hasError('matEndDateInvalid')">Invalid end date</mat-error>
+    <mat-error *ngIf="range.controls.start.hasError('matStartDateInvalid')">Неверная начальная дата</mat-error>
+    <mat-error *ngIf="range.controls.end.hasError('matEndDateInvalid')">Неверная конечная дата</mat-error>
 </mat-form-field>
-<p>Selected range: {{range.value | json}}</p>
+<p>Выбранный период: {{range.value | json}}</p>
   
