--- a/src/app/custom-component/custom-component.component.html
+++ b/src/app/custom-component/custom-component.component.html
@@ -1,1 +1,1 @@
-<app-move-button [custom]="selectedCustom" (outChange)="update($event)" ></app-move-button>
+<app-move-button (outChange)="update($event)" ></app-move-button>
