--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -6,19 +6,7 @@
 
 <br>
 
-<app-move-button></app-move-button>
-
-<br>
-
-<p>То, что сделал сейчас</p>
-
-<br>
-
 <app-custom-component></app-custom-component>
-
-<br>
-
-<p>То, что сделал сейчас ^^^</p>
 
 <br>
 
@@ -29,6 +17,8 @@
 <app-date-range></app-date-range>
 
 <br>
+
+<app-table-imitation></app-table-imitation>
 
 <br>
 
