--- a/src/app/date-range/date-range.component.html
+++ b/src/app/date-range/date-range.component.html
@@ -1,9 +1,8 @@
-<app-view [start]="currentStart" [end]="currentEnd"></app-view>
 <mat-form-field>
     <mat-label>Период просмотра</mat-label>
     <mat-date-range-input [formGroup]="range" [rangePicker]="picker">
-      <input matStartDate formControlName="start" placeholder="Start date" (dateChange)="startChange($event)">
-      <input matEndDate formControlName="end" placeholder="End date" (dateChange)="endChange($event)">
+      <input matStartDate  [(ngModel)]="date1" formControlName="start" placeholder="Start date">
+      <input matEndDate  [(ngModel)]="date2" formControlName="end" placeholder="End date">
     </mat-date-range-input>
     <mat-hint>ММ/ДД/ГГГГ – ММ/ДД/ГГГГ</mat-hint>
     <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
@@ -13,4 +12,6 @@
     <mat-error *ngIf="range.controls.end.hasError('matEndDateInvalid')">Неверная конечная дата</mat-error>
 </mat-form-field>
 <p>Выбранный период: {{range.value | json}}</p>
+<p>{{ date1 }}</p>
+<p>{{ date2 }}</p>
   
