--- a/src/app/action-button/action-button.component.html
+++ b/src/app/action-button/action-button.component.html
@@ -1,5 +1,4 @@
-<app-log [act]="currentAct"></app-log>
-<div class="container" style="margin-top: 100px; width: 200px;">
+<div mat-raised-button>
     <mat-form-field>
         <mat-label>Действие</mat-label>
         <mat-select>
