--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -4,21 +4,15 @@
 
 <br>
 
-<app-custom-component></app-custom-component>
+<p>_______________________________________________________________</p>
 
 <br>
 
-<app-to-work-button></app-to-work-button>
-
-<br>
-
-<app-date-range></app-date-range>
+<app-actions-bar></app-actions-bar>
 
 <br>
 
 <app-table-imitation></app-table-imitation>
-
-<br>
 
 <br>
 
