--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,9 +3,8 @@
   border: 1px solid rgba(0, 0, 0, 0.5);
 }
 .sidenav {
-  padding: 30px;
-  min-width: 300px;
-  background-color: rgb(146, 166, 255);
+  padding: 20px;
+  background-color: #14274F;
 }
 .sidenav-content { 
   height: 50px;
