--- a/src/app/custom-component/custom-component.component.html
+++ b/src/app/custom-component/custom-component.component.html
@@ -1,7 +1,11 @@
-<app-button (outChange)="rename($event)"
-    [classname]="'button-gray'"
-    text="Переименовать"></app-button>
-<app-button (outChange)="work($event)"
-    [classname]="'button-blue'"
-    text="В работу"></app-button>
-<app-action-button [acts]="acs"></app-action-button>
+<div class="row">
+    <app-action-button [acts]="acs" [ngStyle]="currentStyles"></app-action-button>
+    <app-button (outChange)="rename($event)"
+        [classname]="'button-gray'"
+        [ngStyle]="currentStyles"
+        text="Переименовать"></app-button>
+    <app-button (outChange)="work($event)"
+        [classname]="'button-blue'"
+        [ngStyle]="currentStyles"
+        text="В работу"></app-button>
+</div>
