--- a/src/app/date-range/date-range.component.html
+++ b/src/app/date-range/date-range.component.html
@@ -1,4 +1,4 @@
-<mat-form-field>
+<mat-form-field [ngStyle]="currentStyles">
     <mat-label>Период просмотра</mat-label>
     <mat-date-range-input [formGroup]="range" [rangePicker]="picker">
       <input matStartDate #start [(ngModel)]="date1" (dateInput)="changeS(start.value)" formControlName="start" placeholder="Start date">
@@ -12,7 +12,7 @@
     <mat-error *ngIf="range.controls.end.hasError('matEndDateInvalid')">Неверная конечная дата</mat-error>
 </mat-form-field>
 
-<p>Выбранный период: {{range.value | json}}</p>
+<!-- <p>Выбранный период: {{range.value | json}}</p>
 <p>{{ date1 }}</p>
-<p>{{ date2 }}</p>
+<p>{{ date2 }}</p> -->
   
