--- a/src/app/schedule/schedule.component.html
+++ b/src/app/schedule/schedule.component.html
@@ -1,19 +1,6 @@
-<div>
-  <h1>Angular 13 HTML Table Example</h1>
-  <table>
-    <thead>
-      <tr>
-        <th>date1</th>
-        <th>date2</th>
-        <th>date3</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <th>{{data1}}</th>
-        <td>{{data2}}</td>
-        <td>{{data3}}</td>
-      </tr>
-    </tbody>
-  </table>
+<div class="m">
+    <app-page></app-page>
+    <app-actions-bar></app-actions-bar>
+    <br><!-- <app-table-imitation></app-table-imitation> -->
+    <app-table></app-table>
 </div>
