--- a/src/app/sidemenu/sidemenu.component.html
+++ b/src/app/sidemenu/sidemenu.component.html
@@ -1,7 +1,5 @@
-<p>Side Navbar</p>
-<a [routerLink]="['/settings']">settings</a>
+<mat-icon [routerLink]="['/']">work_outline</mat-icon>
 <br>
-<a [routerLink]="['/']">profile</a>
-
+<mat-icon [routerLink]="['/settings']">settings</mat-icon>
 
 
