--- a/src/app/actions-bar/actions-bar.component.html
+++ b/src/app/actions-bar/actions-bar.component.html
@@ -1,4 +1,4 @@
 <div class="row">
-    <app-date-range></app-date-range>
+    <app-date-range [ngStyle]="currentStyles"></app-date-range>
     <app-custom-component></app-custom-component>
 </div>
