--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,7 +5,15 @@
 .sidenav {
   padding: 20px;
   background-color: #14274F;
+  height: 800px;
 }
 .sidenav-content { 
   height: 50px;
+}
+.auth{
+  height: 100%;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
