--- a/src/app/date-range/date-range.component.html
+++ b/src/app/date-range/date-range.component.html
@@ -1,4 +1,4 @@
-<mat-form-field [ngStyle]="currentStyles">
+<mat-form-field>
     <mat-label>Период просмотра</mat-label>
     <mat-date-range-input [formGroup]="range" [rangePicker]="picker">
       <input matStartDate #start [(ngModel)]="date1" (dateInput)="changeS(start.value)" formControlName="start" placeholder="Start date">
