--- a/src/app/not-found/not-found.component.html
+++ b/src/app/not-found/not-found.component.html
@@ -1,2 +1,4 @@
-<h1>Страница не найдена</h1>
-<p>not-found works!</p>
+<div class="m">
+    <h1>Страница не найдена</h1>
+    <p>not-found works!</p>
+</div>
