--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,3 +1,7 @@
 .nav {
-    border: 1px;
+    padding: 8px;
+}
+.round {
+    border-radius: 100px; /* Радиус скругления */
+    border: 1px solid black; /* Параметры рамки */
 }
