--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,8 +1,7 @@
 <div class="nav">
     <app-search [ngStyle]="currentStyles"></app-search>
-    <app-notify ></app-notify>
-    <!-- <img src="assets/myimage.jpg" class="round" alt="image" height="50"/> -->
-    <img [src]="image" class="round" alt="image" height="50"/>
+    <app-notify [ngStyle]="pass"></app-notify>
+    <app-profile></app-profile>
 </div>
 
 
