--- a/src/app/notify/notify.component.html
+++ b/src/app/notify/notify.component.html
@@ -1,7 +1,9 @@
-
-<button mat-icon-button (click)="toggleData()">
+<!-- <button mat-icon-button (click)="toggleData()">
     <mat-icon>notifications</mat-icon>
 </button>
 <div *ngIf="toDisplay">
     <p>Click the below button to display and hide the data</p>
-</div>
+</div> -->
+<button mat-icon-button>
+    <mat-icon>notifications</mat-icon>
+</button>
